Clean code smells.